fix: broken test